# Gestor-NFS-e

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
backend/: packaging_entry.py  pyproject.toml
backend/src/danfse_brasil/: __init__.py  cli.py  codes.py  html.py  models.py  municipalities.py  validation.py  xml.py
backend/src/danfse_nt008/: __init__.py  cli.py  codes.py  compliance.py  exceptions.py  formatting.py  layout.py  models.py  pdf.py  validation.py  xml.py
backend/src/gov_nfse/: __init__.py  certificate.py  client.py  config.py  encoding.py  errors.py  http.py  models.py  xml_utils.py
backend/src/nfse_desktop/: __init__.py  __main__.py  api.py  certificates.py  config.py  database.py  exporter.py  report.py  repository.py  sync.py
backend/tests/: test_certificates.py  test_danfse_parser.py  test_database.py  test_exporter.py  test_xml_summary.py
docs/: index.html  parametros-municipais.md
electron/: certificate-validation.test.ts  certificate-validation.ts  download-query.test.ts  download-query.ts  http-download.test.ts  http-download.ts  main.ts  preload.ts  task-queue.test.ts  task-queue.ts  tsconfig.json
scripts/: build-installer.ps1  check-github-seo.mjs
src/: App.tsx  styles.css  types.ts
windows-cert-helper/: Nfse.WindowsCertificates.csproj  Program.cs
