[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "nfse-desktop-backend"
version = "0.1.0"
description = "Backend local do NFS-e Desktop"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=45",
  "fastapi>=0.115",
  "httpx>=0.28",
  "openpyxl>=3.1",
  "python-multipart>=0.0.20",
  "qrcode[pil]>=7.4",
  "uvicorn>=0.30",
  "weasyprint>=61.0"
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.14",
  "pytest>=8",
  "ruff>=0.11"
]

[tool.hatch.build.targets.wheel]
packages = ["src/nfse_desktop", "src/gov_nfse", "src/danfse_nt008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
